--- a/CY_ScanCode/MainWindow.xaml
+++ b/CY_ScanCode/MainWindow.xaml
@@ -406,51 +406,51 @@
     </Window.Resources>
     <Grid Background="{StaticResource BodyBackground}">
         <Rectangle Fill="{StaticResource RectangleContainerBackground}" Width="1000" Height="670" Margin="0,70,0,0" RadiusX="10" RadiusY="10" StrokeThickness="2" Stroke="{StaticResource RectangleContainerStroke}"/>
-        <StackPanel VerticalAlignment="Top" Background="{StaticResource TitleBackground}" Height="70"  >
+        <DockPanel  VerticalAlignment="Top" Background="{StaticResource TitleBackground}" Height="70"  >
+            <TextBlock Effect="{StaticResource IconEffect}" FontSize="52" FontWeight="Bold" HorizontalAlignment="Left" Margin="10,0,0,0" Text="CY一维码、二维码生成与管理系统" Foreground="{StaticResource PressedForeground}" />
             <Button  x:Name="Button_Exit" Style="{StaticResource RD_EllipseButtonStyle}" Content="{StaticResource Path_Exit}"  Width="55" Height="55"  Margin="0,8,20,0" HorizontalAlignment="Right" FontSize="100" Click="Button_Exit_Click" />
-        </StackPanel>
+        </DockPanel>
         <Rectangle Fill="{StaticResource MainViewTitleLine}" VerticalAlignment="Top" Width="1024" Height="5" Margin="0,70,0,0" />
         <StackPanel Orientation="Vertical" Margin="80,120,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
             <StackPanel Orientation="Horizontal" >
                 <Path x:Name="Path_Result" Effect="{StaticResource IconEffect}" Data="{StaticResource Pass}" Stretch="Fill" Fill="{StaticResource TextForeground}" Width="140" Height="140"/>
-                <TextBlock x:Name="TextBlock_Result" Width="250" Text="通过" FontSize="100" Margin="20,0,0,0" VerticalAlignment="Center" Foreground="{StaticResource TextForeground}"/>
+                <TextBlock x:Name="TextBlock_Result" Effect="{StaticResource IconEffect}" Width="250" Text="通过" FontSize="100" Margin="20,0,0,0" VerticalAlignment="Center" Foreground="{StaticResource TextForeground}"/>
                 <StackPanel Orientation="Vertical"  Margin="20,10,0,0">
                     <Button x:Name="Button_Start" Style="{StaticResource RD_ButtonStyle}" Width="190" Height="60"  RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Click="Button_Start_Click">
                         <StackPanel Orientation="Horizontal">
-                            <Path Fill="{StaticResource TextForeground}" Stretch="Fill" Width="30" Height="30" Data="{StaticResource Scan}"/>
-                            <TextBlock Margin="15,0,0,0" Text="开始" FontSize="30"/>
+                            <Path Fill="{Binding ElementName=TextBlock_Start,Path=Foreground}" Stretch="Fill" Width="30" Height="30" Data="{StaticResource Scan}"/>
+                            <TextBlock x:Name="TextBlock_Start" Margin="15,0,0,0" Text="开始" FontSize="30"/>
                         </StackPanel>
                     </Button>
-                    <Button x:Name="Button_Save" Style="{StaticResource RD_ButtonStyle}" Width="190" Height="60" Margin="0,10,0,0"  RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left">
+                    <Button x:Name="Button_Save" Style="{StaticResource RD_ButtonStyle}" Width="190" Height="60" Margin="0,10,0,0"  RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Click="Button_Save_Click">
                         <StackPanel Orientation="Horizontal">
-                            <Path Fill="{StaticResource TextForeground}" Stretch="Fill" Width="30" Height="30" Data="{StaticResource Save}"/>
-                            <TextBlock Margin="15,0,0,0" Text="保存" FontSize="30"/>
+                            <Path Fill="{Binding ElementName=TextBlock_Save,Path=Foreground}" Stretch="Fill" Width="30" Height="30" Data="{StaticResource Save}"/>
+                            <TextBlock x:Name="TextBlock_Save" Margin="15,0,0,0" Text="保存" FontSize="30"/>
                         </StackPanel>
                     </Button>
                 </StackPanel>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,30,0,0">
                 <Path Effect="{StaticResource IconEffect}" Width="60" Height="60" Stretch="Fill" Fill="{StaticResource TextForeground2}" Data="{StaticResource BarcodeScan}"/>
-                <TextBox x:Name="TextBox_BarcodeScan" Style="{StaticResource RD_TextBoxStyle}" Margin="20,0,0,0" FontSize="40" Width="550" Height="80" KeyDown="TextBox_BarcodeScan_KeyDown" />
+                <TextBox x:Name="TextBox_BarcodeScan" CaretBrush="Black" Style="{StaticResource RD_TextBoxStyle}" Margin="20,0,0,0" FontSize="40" Width="550" Height="80" KeyDown="TextBox_BarcodeScan_KeyDown" />
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,25,0,0">
                 <Path Effect="{StaticResource IconEffect}" Width="60" Height="60" Stretch="Fill" Fill="{StaticResource TextForeground2}" Data="{StaticResource  QrcodeScan}"/>
-                <TextBox x:Name="TextBox_QrcodeScan" Style="{StaticResource RD_TextBoxStyle}" Margin="20,0,0,0" FontSize="40" Text="" Width="550" Height="80" KeyDown="TextBox_QrcodeScan_KeyDown"/>
+                <TextBox x:Name="TextBox_QrcodeScan" CaretBrush="Black" Style="{StaticResource RD_TextBoxStyle}" Margin="20,0,0,0" FontSize="40" Text="" Width="550" Height="80" KeyDown="TextBox_QrcodeScan_KeyDown"/>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" Margin="0,50,0,0">
-                <Path Effect="{StaticResource IconEffect}" Width="50" Height="50" Stretch="Fill" Fill="{StaticResource PressedForeground}" Data="{StaticResource  Barcode}"/>
+                <Path Effect="{StaticResource IconEffect}" Width="50" Height="50" Stretch="Fill" Fill="{StaticResource TextForeground2}" Data="{StaticResource  Barcode}"/>
                 <TextBox x:Name="TextBox_Barcode" Style="{StaticResource RD_TextBoxStyle}" Focusable="False" Margin="30,0,0,0" FontSize="40" Text="" Width="550" Height="80" />
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,25,0,0">
-                <Path Effect="{StaticResource IconEffect}" Width="50" Height="50" Stretch="Fill" Fill="{StaticResource PressedForeground}" Data="{StaticResource  Qrcode}"/>
+                <Path Effect="{StaticResource IconEffect}" Width="50" Height="50" Stretch="Fill" Fill="{StaticResource TextForeground2}" Data="{StaticResource  Qrcode}"/>
                 <TextBox x:Name="TextBox_Qrcode" Style="{StaticResource RD_TextBoxStyle}" Focusable="False" Margin="30,0,0,0" FontSize="40" Text="" Width="550" Height="80" />
             </StackPanel>
         </StackPanel>
-        <StackPanel Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,130,70,0"  >
-            <DataGrid x:Name="DataGrid1" Style="{StaticResource RD_DataGridBlackStyle}" Width="220" Height="580" RenderTransformOrigin="0.5,0.5">
-               
-            </DataGrid>
+        <StackPanel Effect="{StaticResource IconEffect}" Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,130,60,0" Background="Black"  >
+            <DataGrid x:Name="DataGrid1" IsReadOnly="True" ColumnWidth="210" Style="{StaticResource RD_DataGridBlackStyle}" Width="230" Height="580" RenderTransformOrigin="0.5,0.5" Margin="2"/>
         </StackPanel>
+        <Rectangle Width="570" Height="220" HorizontalAlignment="Left" Margin="150,0,0,0" Fill="Transparent"/>
     </Grid>
 </Window>
